L10n for: Bug 285270 - make the sound events configurable per-view AND Bug 622714 - provide visual notifications of events

--- a/pl/extensions/irc/chrome/chatzilla.properties
+++ b/pl/extensions/irc/chrome/chatzilla.properties
@@ -1032,6 +1032,9 @@ msg.logfile.write.error=Nie można zapisywać do pliku <%S>. Wyłączono tworzen
 msg.logging.icon.off=Zapisywanie dziennika rozmów jest wyłączone. Kliknij ikonę, aby włączyć zapisywanie dziennika rozmów tej karty.
 msg.logging.icon.on=Zapisywanie dziennika rozmów jest włączone. Kliknij ikonę, aby wyłączyć zapisywanie dziennika rozmów tej karty.
 
+msg.alert.icon.off=Powiadomienia są wyłączone. Kliknij ikonę, by w nowych wiadomościach uruchomić wyświetlanie powiadomień.
+msg.alert.icon.on=Powiadomienia są włączone. Kliknij ikonę, by w nowych wiadomościach wyłączyć wyświetlanie powiadomień.
+
 msg.already.connected=Połączenie z "%S" już istnieje. 
 msg.enter.nick=Wybierz swój pseudonim 
 msg.network.connecting=Trwa nawiązywanie połączenia z "%S". Wprowadź /cancel, aby anulować. 
@@ -1461,6 +1464,20 @@ msg.prefs.global=Ustawienia globalne
 # NOTE: "Bugzilla", "ChatZilla" and "mIRC" are product names.
 pref.activityFlashDelay.label=Włącz opóźnienie mrugania 
 pref.activityFlashDelay.help=Jeśli w karcie której zawartość uległa już zmianie, ponownie coś się zmieniło, karta ta zaczyna mrugać. Wartość opcji ustawia czas trwania mrugnięcia w milisekundach, 0 wyłącza. 
+pref.alert.globalEnabled.label=Włączone globalnie
+pref.alert.globalEnabled.help=Jeśli funkcja ta jest włączona, wszystkie skonfigurowane powiadomienia mogą być wyświetlane. jeśli funkcja jest wyłączona – żadne powiadomienia nie będą wyświetlane.
+pref.alert.enabled.label=Włączone
+pref.alert.enabled.help=Jeśli funkcja ta jest włączona, powiadomienia w tym widoku są wyświetlane.
+pref.alert.nonFocusedOnly.label=Tylko, gdy widok jest nieaktywny
+pref.alert.nonFocusedOnly.help=Jeśli funkcja ta jest włączona, w aktywnym widoku nie są wyświetlane żadne wiadomości. Wiadomości z innych widoków są wyświetlane. Zaleca się wyłączenie tej funkcji w kanałach moderatorów i w kanałach o małym ruchu.
+pref.alert.channel.event.label=Powiadamiaj o zdarzeniach w kanale
+pref.alert.channel.event.help=Jeśli funkcja ta jest włączona, są wyświetlane powiadomienia o przyłączeniu, odłączeniu, usunięciu z kanału, trybach użytkownika i inne powiadomienia systemowe. Zaleca się włączenie tej funkcji w kanałach moderatorów i w kanałach o małym ruchu.
+pref.alert.channel.chat.label=Powiadamiaj o zdarzeniach na czacie
+pref.alert.channel.chat.help=Jeśli funkcja ta jest włączona, są wyświetlane normalne powiadomienia czatu. Może być to denerwujące w kanałach o dużym ruchu. Zaleca się włączenie tej funkcji w kanałach moderatorów i w kanałach o małym ruchu.
+pref.alert.channel.stalk.label=Powiadamiaj o stalkingu na kanale
+pref.alert.channel.stalk.help=Jeśli funkcja ta jest włączona, są wyświetlane powiadomienia o występowaniu w treści wiadomości słów mogących być formą prześladowania.
+pref.alert.user.chat.label=Powiadamiaj o prywatnym czacie
+pref.alert.user.chat.help=Jeśli funkcja ta jest włączona, są wyświetlane powiadomienia dla prywatnych czatów.
 pref.aliases.label=Aliasy poleceń 
 pref.aliases.help=Umożliwia tworzenie skrótów do różnych komend lub sekwencji komend. Każdy alias ma postać "<nazwa> = <lista-komend>". "lista-komend" jest listą komend (bez poprzedzającego "/") razem z ich parametrami. Komendy rozdzielane są średnikiem ";". Przy uruchamianiu ChatZilli nazwa aliasu automatycznie staje się komendą.
 pref.autoAwayCap.label=Limit użytkowników kanału, dla którego będzie automatycznie sprawdzana obecność wszystkich użytkowników. 
@@ -1662,6 +1679,8 @@ pref.group.general.label=Ogólne
 pref.group.general.connect.label=Połączenie 
 pref.group.general.ident.label=Identyfikacja 
 pref.group.general.log.label=Dzienniki 
+pref.group.general.palert.label=Powiadomienia
+pref.group.global.palertconfig.label=Konfiguracja powiadomień
 pref.group.appearance.label=Wygląd 
 pref.group.appearance.misc.label=Różne 
 pref.group.appearance.motif.label=Schematy kolorów
@@ -1691,9 +1710,9 @@ pref.group.global.log.help=Określa domyślne opcje tworzenia dzienników dla ka
 pref.group.global.maxLines.label=Rozmiar historii 
 pref.group.global.maxLines.help=Liczba wierszy możliwa do zachowania w tym typie karty. W momencie przekroczenia tego limitu, podczas dodawania nowych, najstarsze wiersze są usuwane. 
 pref.group.global.sounds.label=Ustawienia dźwięku 
-pref.group.global.sounds.help=
-pref.group.global.soundEvts.label=Dźwięki zdarzeń 
-pref.group.global.soundEvts.help=Dźwięki przypisane zdarzeniom. Lista "beep" lub adresów URL plików dźwiękowych. 
+pref.group.general.sounds.help=
+pref.group.general.soundEvts.label=Dźwięki zdarzeń
+pref.group.general.soundEvts.help=Tutaj można dostosować dźwięki odtwarzane podczas różnych zdarzeń. Te preferencje określa się, podając rozdzielone spacją informacje o rodzaju odtwarzanego dźwięku. Dla prostego sygnału dźwiękowego będzie to – „beep”, dla dźwięku odtwarzanego z pliku – adres URL pliku. Jeśli pole pozostanie puste, żaden dźwięk nie będzie emitowany.
 
 # These are the prefs that get grouped #
 
