Some fixes based on Leszek Zyczkowski's localization of ChatZilla

--- a/pl/extensions/irc/chrome/chatzilla.properties
+++ b/pl/extensions/irc/chrome/chatzilla.properties
@@ -81,7 +81,7 @@ msg.confirm=Potwierdź
 ### End of notes ###
 
 cmd.about.label=O ChatZilli 
-cmd.about.help=Wyświetl informacje o wersji ChatZilli. 
+cmd.about.help=To polecenie powoduje wyświetlenie informacji o używanej wersji ChatZilli.
 
 cmd.alias.params=[<alias-name> [<command-list>]]
 cmd.alias.help=Definiuje <alias-name> jako alias dla rozdzielanej średnikami (';') listy komend określonych przez <command-list>. Jeżeli <command-list> jest znakiem minus ('-'), to alias zostanie usunięty. Jeżeli <command-list> jest pominięte, to alias zostanie wyświetlony. Jeżeli <alias-name> nie jest podane, to wszystkie aliasy zostaną wyświetlone.
@@ -1634,7 +1634,7 @@ pref.proxy.typeOverride.label=Typ proxy
 pref.proxy.typeOverride.help=Umożliwia nadpisanie globalnych ustawień serwera proxy poprzez wprowadzenie "http" - używany będzie wtedy serwer proxy przeglądarki lub poprzez wprowadzenie "none" - wymusza pracę bez pośrednictwa serwera proxy (dotyczy również SOCKS proxy). Opcja ta działa, jeśli w przeglądarce ustawiona jest ręczna konfiguracja serwerów proxy.
 pref.reconnect.label=Automatyczne wznawianie połączenia 
 pref.reconnect.help=Jeżeli połączenie z serwerem zostanie niespodziewanie utracone, ChatZilla może automatycznie ponownie połączyć się z serwerem.
-pref.websearch.url.label=Adres URL dla wyszukiwania w sieci
+pref.websearch.url.label=Adres URL wyszukiwania
 pref.websearch.url.help=Adres URL który będzie wykorzystywany podczas wyszukiwania w sieci. Atrybuty wyszukiwania zostaną dodane na końcu tego adresu URL. Opcjonalnie można podać parametr %s, aby podać parametry wyszukiwania w innym miejscu adresu URL (np. "http://www.searchwebsite.com/search?q=%s"). Jeżeli nie podano tutaj żadnego adresu URL, to ChatZilla będzie używać domyślnej wyszukiwarki ustawionej w przeglądarce (lub Google, jeżeli ChatZilla nie jest uruchomiona jako rozszerzenie do przeglądarki).
 pref.showModeSymbols.label=Pokazuj symbole trybu użytkownika 
 pref.showModeSymbols.help=Lista użytkowników może zawierać literowe symbole przywilejów ("@" = operator, "%" = półoperator, "+" = osoba mająca prawo głosu) albo odpowiadające im kolorowe kropki (zielone dla operatorów, granatowe dla półoperatorów i niebieskie dla osób mających prawo głosu). Aby wyświetlane były symbole przywilejów, należy włączyć to ustawienie. 
