Aviary.pl Issue 4767 - Zdania kończące się zaimkiem zwrotnym „się”

--- a/pl/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/pl/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -128,7 +128,7 @@ LDIFFiles=LDIF
 CSVFiles=Rozdzielany przecinkami
 TABFiles=Rozdzielany tabulatorami
 VCFFiles=vCard
-failedToExportTitle=Polecenie eksportu nie powiodło się
+failedToExportTitle=Eksport się nie powiódł
 failedToExportMessageNoDeviceSpace=Nie udało się eksportować książki adresowej, nie ma wolnego miejsca na urządzeniu.
 failedToExportMessageFileAccessDenied=Nie udało się eksportować książki adresowej, dostęp do pliku zabroniony.
 
