--- a/pl/suite/chrome/mailnews/pref/replicationProgress.properties
+++ b/pl/suite/chrome/mailnews/pref/replicationProgress.properties
@@ -3,8 +3,8 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 replicationStarted=Rozpoczęto replikację…
 changesStarted=Rozpoczęto wyszukiwanie zmian do replikacji…
-replicationSucceeded=Replikacja powiodła się
-replicationFailed=Replikacja nie powiodła się
+replicationSucceeded=Replikacja się powiodła
+replicationFailed=Replikacja się nie powiodła
 replicationCancelled=Replikacja anulowana
 # LOCALIZATION NOTE
 # do not localize %S.  %S is the current entry number (an integer)
