--- a/pl/suite/chrome/mailnews/addressbook/ldapAutoCompErrs.properties
+++ b/pl/suite/chrome/mailnews/addressbook/ldapAutoCompErrs.properties
@@ -13,11 +13,11 @@
 
 ## @name ERR_STATE_INITIALIZING
 ## @loc none
-1=Połączenie z serwerem LDAP nie powiodło się
+1=Połączenie z serwerem LDAP się nie powiodło
 
 ## @name ERR_STATE_BINDING
 ## @loc none
-2=Połączenie z serwerem LDAP nie powiodło się
+2=Połączenie z serwerem LDAP się nie powiodło
 
 ## @name ERR_STATE_BOUND
 ## @loc none
