Aviary.pl Issue 3737 - Zmienić wszędzie cudzysłowy na polskie drukarskie

--- a/pl/suite/chrome/browser/navigator.properties
+++ b/pl/suite/chrome/browser/navigator.properties
@@ -47,7 +47,7 @@ menuOpenAllInTabs.label=Otwórz wszystkie w kartach
 #   "Search " + search_engine_name + " for " + user_input
 #   e.g. "Search Google for abc"
 # DO NOT change the %S order when translate, the first %S must be the search engine name.
-searchFor=Szukaj w %S "%S"
+searchFor=Szukaj w %S za „%S”
 
 # Star button
 starButtonOn.tooltip=Edytuj tę zakładkę
