--- a/pl/suite/chrome/common/bookmarks/bm-props.properties
+++ b/pl/suite/chrome/common/bookmarks/bm-props.properties
@@ -11,7 +11,7 @@ dialogTitleAddBookmark=Nowa zakładka
 dialogTitleAddLivemark=Subskrybuj za pomocą dynamicznej zakładki
 dialogTitleAddFolder=Nowy folder
 dialogTitleAddMulti=Nowe zakładki
-dialogTitleEdit=Właściwości "%S"
+dialogTitleEdit=Właściwości „%S”
 
 bookmarkAllTabsDefault=[Nazwa folderu]
 newFolderDefault=Nowy folder
