--- a/pl/suite/chrome/common/contentAreaCommands.properties
+++ b/pl/suite/chrome/common/contentAreaCommands.properties
@@ -6,7 +6,7 @@
 
 # LOCALIZATION NOTE (searchSelected): %1$S is the search engine,
 # %2$S is the selection string.
-searchSelected=Szukaj w %S: "%S"
+searchSelected=Szukaj w %S: „%S”
 searchSelected.accesskey=S
 
 blockImage=Blokuj obrazki z witryny %S
