--- a/pl/suite/chrome/common/downloads/downloadmanager.properties
+++ b/pl/suite/chrome/common/downloads/downloadmanager.properties
@@ -68,6 +68,6 @@ statusActive=%1$S — %2$S
 fromSource=Z %S
 toTarget=Do %S
 
-fileExecutableSecurityWarning=Uwaga: Rozpoczęto uruchamianie pliku wykonywalnego "%S". Pliki wykonywalne mogą zawierać wirusy lub inny niebezpieczny kod, który może uszkodzić komputer. Zaleca się zachowanie ostrożności przy otwieraniu plików tego typu. Czy na pewno uruchomić "%S"?
+fileExecutableSecurityWarning=Uwaga: Rozpoczęto uruchamianie pliku wykonywalnego „%S”. Pliki wykonywalne mogą zawierać wirusy lub inny niebezpieczny kod, który może uszkodzić komputer. Zaleca się zachowanie ostrożności przy otwieraniu plików tego typu. Czy na pewno uruchomić „%S”?
 fileExecutableSecurityWarningTitle=Uruchamianie pliku wykonywalnego!
 fileExecutableSecurityWarningDontAsk=Nie pytaj ponownie
