--- a/pl/suite/chrome/common/feeds/subscribe.properties
+++ b/pl/suite/chrome/common/feeds/subscribe.properties
@@ -3,10 +3,10 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 linkTitleTextFormat=Przejdź do %S
-addHandler=Czy dodać "%S" (%S) jako czytnik kanałów? 
+addHandler=Czy dodać „%S” (%S) jako czytnik kanałów? 
 addHandlerAddButton=Dodaj czytnik kanałów
 addHandlerAddButtonAccesskey=D
-handlerRegistered="%S" jest już zarejestrowany jako czytnik kanałów 
+handlerRegistered=„%S” jest już zarejestrowany jako czytnik kanałów 
 subscribeNow=Subskrybuj
 chooseApplicationMenuItem=Wybierz program…
 chooseApplicationDialogTitle=Wybierz program
