--- a/pl/suite/chrome/common/places/places.properties
+++ b/pl/suite/chrome/common/places/places.properties
@@ -21,7 +21,7 @@ bookmarksRestoreParseError=Nie udało się przetworzyć pliku kopii zapasowej.
 bookmarksLivemarkLoading=Pobieranie dynamicznej zakładki…
 bookmarksLivemarkFailed=Pobieranie dynamicznej zakładki się nie powiodło.
 
-menuOpenLivemarkOrigin.label=Otwórz "%S"
+menuOpenLivemarkOrigin.label=Otwórz „%S”
 
 view.sortBy.title.label=Sortuj wg nazw
 view.sortBy.title.accesskey=n
@@ -43,8 +43,8 @@ view.sortBy.tags.label=Sortuj według etykiet
 view.sortBy.tags.accesskey=e
 
 searchBookmarks=Szukaj w zakładkach
-searchCurrentDefault=Szukaj w "%S"
-findInPrefix=Znajdź w "%S"…
+searchCurrentDefault=Szukaj w „%S”
+findInPrefix=Znajdź w „%S”…
 
 tabs.openWarningTitle=Potwierdź otwarcie
 tabs.openWarningMultipleBranded=Zażądano otwarcia %S kart jednocześnie. Może to spowodować spowolnienie pracy programu %S podczas wczytywania stron. Czy na pewno kontynuować?
