--- a/pl/suite/chrome/common/profile/profileSelection.properties
+++ b/pl/suite/chrome/common/profile/profileSelection.properties
@@ -2,10 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-deleteLocked=Program %S nie może usunąć profilu "%S", ponieważ profil ten jest używany.
-deleteProfile=Usunięcie profilu spowoduje usunięcie go z listy dostępnych profili. Czynności tej nie można cofnąć.\n\nWraz z profilem możliwe jest również usunięcie wszystkich jego plików, zawierających pocztę, ustawienia, certyfikaty i inne dane osobiste użytkownika. Wybranie tej opcji spowoduje usunięcie folderu "%S" i jest operacją nieodwracalną.\n\nCzy na pewno usunąć pliki profilu?
+deleteLocked=Program %S nie może usunąć profilu „%S”, ponieważ profil ten jest używany.
+deleteProfile=Usunięcie profilu spowoduje usunięcie go z listy dostępnych profili. Czynności tej nie można cofnąć.\n\nWraz z profilem możliwe jest również usunięcie wszystkich jego plików, zawierających pocztę, ustawienia, certyfikaty i inne dane osobiste użytkownika. Wybranie tej opcji spowoduje usunięcie folderu „%S” i jest operacją nieodwracalną.\n\nCzy na pewno usunąć pliki profilu?
 
 manageTitle=Zarządzaj profilami użytkownika
 selectTitle=Wybierz profil użytkownika
 
-dirLocked=Program %S nie może użyć profilu "%S". Profil ten może być w użyciu, niedostępny lub uszkodzony.\n\nProszę wybrać inny profil lub utworzyć nowy.
+dirLocked=Program %S nie może użyć profilu „%S”. Profil ten może być w użyciu, niedostępny lub uszkodzony.\n\nProszę wybrać inny profil lub utworzyć nowy.
