--- a/pl/suite/chrome/common/search/search.properties
+++ b/pl/suite/chrome/common/search/search.properties
@@ -3,4 +3,4 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 searchtip=Szukaj w %S
-cmd_addFoundEngine=Dodaj "%S"
+cmd_addFoundEngine=Dodaj „%S”
