--- a/pl/suite/chrome/mailnews/eudoraImportMsgs.properties
+++ b/pl/suite/chrome/mailnews/eudoraImportMsgs.properties
@@ -149,7 +149,7 @@
 # LOCALIZATION NOTE (2020): This warning is displayed if the action cannot be imported.
 # The "action" is what is done to the message if the filter matches, e.g. transfer to
 # a mailbox, change the priority.  The %S will be replaced with the name of the action.
-2020=Brak możliwości importu: "%S"
+2020=Brak możliwości importu: „%S”
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_VERB
@@ -157,7 +157,7 @@
 # LOCALIZATION NOTE (2021): This warning is displayed if the verb cannot be imported.
 # The "verb" is how filters match the header to the text, e.g. "contains", "is",
 # "begins with".  The %s will be replaced with the name of the verb.
-2021=Brak możliwości importu słowa kluczowego: "%s"
+2021=Brak możliwości importu słowa kluczowego: „%s”
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_EMPTY_HEADER
@@ -173,7 +173,7 @@
 # negated, but the negative comparison is not supported, e.g. the "starts with" verb has
 # no corresponding "doesn't start with" verb.  The %S will be replaced with the name of
 # the verb.
-2023=Brak możliwości zanegowania słowa kluczowego: "%S"
+2023=Brak możliwości zanegowania słowa kluczowego: „%S”
 
 # Description
 ## @name EUDORAIMPORT_FILTERS_WARN_META_HEADER
@@ -190,4 +190,4 @@
 # LOCALIZATION NOTE (2025): This warning is displayed when a filter has an action to
 # transfer the message to a mailbox, but the named mailbox doesn't exist.  The %S will
 # be replaced with the name of the mailbox.
-2025=Nie można odnaleźć skrzynki pocztowej "%S"
+2025=Nie można odnaleźć skrzynki pocztowej „%S”
