--- a/pl/suite/chrome/mailnews/filter.properties
+++ b/pl/suite/chrome/mailnews/filter.properties
@@ -16,7 +16,7 @@ matchAllFilterName=Wszystkie wiadomości
 filterListBackUpMsg=Filtry wiadomości nie działają, ponieważ plik msgFilterRules.dat, który zawiera filtry wiadomości, nie może być odczytany. Zostanie utworzony nowy plik msgFilterRules.dat oraz kopia starszego pliku, nazwana rulesbackup.dat, w tym samym katalogu.
 customHeaderOverflow=Limit 50 nagłówków użytkownika został przekroczony. Należy usunąć jeden lub więcej nagłówków, a następnie spróbować ponownie.
 filterCustomHeaderOverflow=Utworzone filtry przekroczyły limit 50 nagłówków użytkownika. Należy wyedytować plik msgFilterRules.dat tak, aby zawierał mniejszą liczbę nagłówków użytkownika.
-invalidCustomHeader=Jeden z filtrów używa nagłówka, który zawiera niedozwolone znaki, takie jak ":", znaki niedrukowalne, znaki niezgodne ze standardem ascii, lub ośmiobitowe znaki ascii. Proszę usunąć błędne znaki w pliku msgFilterRules.dat, który to zawiera ustawienia filtrów.
+invalidCustomHeader=Jeden z filtrów używa nagłówka, który zawiera niedozwolone znaki, takie jak „:”, znaki niedrukowalne, znaki niezgodne ze standardem ascii, lub ośmiobitowe znaki ascii. Proszę usunąć błędne znaki w pliku msgFilterRules.dat, który to zawiera ustawienia filtrów.
 continueFilterExecution=Zastosowanie filtru %S nie powiodło się. Czy kontynuować uruchamianie filtrów?
 promptTitle=Uruchomione filtry
 promptMsg=Trwa filtrowanie wiadomości.\nCzy na pewno kontynuować uruchamianie filtrów?
@@ -27,7 +27,7 @@ searchTermsInvalidTitle=Nieprawidłowe atrybuty wyszukiwania
 # LOCALIZATION NOTE(searchTermsInvalidRule)
 # %1$S=search attribute name from the invalid rule
 # %2$S=search operator from the bad rule
-searchTermsInvalidRule=Ten filtr nie może zostać zapisany, ponieważ jego atrybut "%1$S %2$S" jest nieprawidłowy w tym kontekście.
+searchTermsInvalidRule=Ten filtr nie może zostać zapisany, ponieważ jego atrybut „%1$S %2$S” jest nieprawidłowy w tym kontekście.
 # LOCALIZATION NOTE(filterActionOrderExplanation)
 # Keep the \n\n that mean 2 linebreaks.
 filterActionOrderExplanation=Gdy wiadomość pasuje do filtru, następujące czynności zostaną kolejno wykonane:\n\n
@@ -48,7 +48,7 @@ logMoveStr=przeniesiono wiadomość o id = %1$S do %2$S
 logCopyStr=skopiowano wiadomość o id = %1$S do %2$S
 # LOCALIZATION NOTE(filterLogDetectStr)
 # %1$S=filter name %2$S=author, %3$S=subject, %4$S=date
-filterLogDetectStr=Zastosowano filtr "%1$S" dla wiadomości od %2$S - %3$S, wysłanej %4$S
+filterLogDetectStr=Zastosowano filtr „%1$S” dla wiadomości od %2$S - %3$S, wysłanej %4$S
 filterMissingCustomAction=Brakująca czynność
 filterAction2=zmieniono priorytet
 filterAction3=usunięto
