--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -71,25 +71,25 @@ autoCompactAllFoldersText=Czy uporządkować wszystkie lokalne i dostępne w try
 autoCompactAlwaysAskCheckbox=Zawsze pytaj przed automatycznym porządkowaniem folderów
 compactNowButton=&Uporządkuj
 
-confirmFolderDeletionForFilter=Usunięcie folderu "%S" spowoduje zablokowanie wszystkich filtrów powiązanych z folderem. Czy na pewno usunąć wybrany folder?
+confirmFolderDeletionForFilter=Usunięcie folderu „%S” spowoduje zablokowanie wszystkich filtrów powiązanych z folderem. Czy na pewno usunąć wybrany folder?
 alertFilterChanged=Filtry powiązane z tym folderem zostaną zaktualizowane.
-filterDisabled=Folder "%S" nie może zostać odnaleziony. Wszystkie filtry powiązane z tym folderem zostaną wyłączone. Sprawdź, czy folder istnieje oraz, czy filtry posiadają poprawną ścieżkę dostępu do folderu.
-filterFolderDeniedLocked=Pasujące do filtru wiadomości nie mogą zostać zapisane w folderze "%S" ponieważ trwa wykonywanie innej operacji.
+filterDisabled=Folder „%S” nie może zostać odnaleziony. Wszystkie filtry powiązane z tym folderem zostaną wyłączone. Sprawdź, czy folder istnieje oraz, czy filtry posiadają poprawną ścieżkę dostępu do folderu.
+filterFolderDeniedLocked=Pasujące do filtru wiadomości nie mogą zostać zapisane w folderze „%S” ponieważ trwa wykonywanie innej operacji.
 parsingFolderFailed=Otworzenie folderu %S jest niemożliwe, ponieważ jest on używany przez inny proces. Należy poczekać na zakończenie wszystkich operacji wykonywanych przez ten proces, a następnie spróbować ponownie.
 deletingMsgsFailed=Usunięcie wiadomości w folderze %S jest niemożliwe, ponieważ jest on używany przez inny proces. Należy poczekać na zakończenie wszystkich operacji wykonywanych przez ten proces, a następnie spróbować ponownie.
 alertFilterCheckbox=Nie wyświetlaj tego ostrzeżenia ponownie.
-compactFolderDeniedLock=Uporządkowanie folderu "%S" było niemożliwe, ponieważ wykonywana jest inna operacja. Spróbuj ponownie później.
-compactFolderWriteFailed=Uporządkowanie folderu "%S" było niemożliwe, ponieważ operacja zapisywania danych w folderze nie powiodła się. Należy upewnić się, że dostępna jest wystarczająca ilość miejsca na dysku oraz, że posiadane są wymagane prawa zapisu do systemu plików, a następnie spróbować ponownie.
+compactFolderDeniedLock=Uporządkowanie folderu „%S” było niemożliwe, ponieważ wykonywana jest inna operacja. Spróbuj ponownie później.
+compactFolderWriteFailed=Uporządkowanie folderu „%S” było niemożliwe, ponieważ operacja zapisywania danych w folderze nie powiodła się. Należy upewnić się, że dostępna jest wystarczająca ilość miejsca na dysku oraz, że posiadane są wymagane prawa zapisu do systemu plików, a następnie spróbować ponownie.
 filterFolderHdrAddFailed=Filtrowanie wiadomości do folderu '%S' nie powiodło się, gdyż dodawanie wiadomości do tego folderu zakończyło się niepowodzeniem. Należy sprawdzić, czy folder wyświetla się poprawnie i w razie czego spróbować naprawić folder z poziomu właściwości tego folderu.
-filterFolderWriteFailed=Pasujące do filtru wiadomości nie mogą zostać zapisane do folderu "%S", ponieważ operacja zapisu w folderze nie powiodła się. Sprawdź, czy jest dostępna wystarczająca ilość miejsca na dysku oraz czy posiadane są wymagane prawa zapisu do systemu plików, a następnie spróbuj ponownie.
-copyMsgWriteFailed=Wiadomości nie zostały przeniesione lub skopiowane do folderu "%S", ponieważ operacja zapisywania danych w folderze nie powiodła się. Aby zwolnić więcej miejsca na dysku, należy z menu Plik wybrać Opróżnij kosz, a następnie Porządkuj foldery. Po wykonaniu tych czynności można spróbować ponownie.
+filterFolderWriteFailed=Pasujące do filtru wiadomości nie mogą zostać zapisane do folderu „%S”, ponieważ operacja zapisu w folderze nie powiodła się. Sprawdź, czy jest dostępna wystarczająca ilość miejsca na dysku oraz czy posiadane są wymagane prawa zapisu do systemu plików, a następnie spróbuj ponownie.
+copyMsgWriteFailed=Wiadomości nie zostały przeniesione lub skopiowane do folderu „%S” ponieważ operacja zapisywania danych w folderze nie powiodła się. Aby zwolnić więcej miejsca na dysku, należy z menu Plik wybrać Opróżnij kosz, a następnie Porządkuj foldery. Po wykonaniu tych czynności można spróbować ponownie.
 cantMoveMsgWOBodyOffline=Podczas pracy w trybie offline przenoszenie lub kopiowanie wiadomości, które nie zostały uprzednio pobrane jest niedostępne. Aby przejść do trybu online, należy w oknie głównym programu otworzyć menu Plik, wybrać Tryb offline, a następnie odznaczyć Pracuj w trybie offline.
 operationFailedFolderBusy=Wykonanie operacji nie powiodło się, ponieważ inny proces ma dostęp do folderu. Należy poczekać na zakończenie działania tego procesu, a następnie spróbować ponownie.
 folderRenameFailed=Nazwa folderu nie może zostać zmieniona. Prawdopodobnie folder jest ponownie analizowany lub nowa nazwa nie jest prawidłową nazwą folderu.
 # LOCALIZATION NOTE(verboseFolderFormat): %1$S is folder name, %2$S is server name
 verboseFolderFormat=%1$S konta %2$S
 # LOCALIZATION NOTE(filterFolderTruncateFailed): %1$S is replaced by the folder name, %2$S is replaced by the brandShortName
-filterFolderTruncateFailed=Podczas przenoszenia wiadomości za pomocą filtru z folderu Otrzymane do folderu "%1$S" wystąpił błąd porządkowania pliku wiadomości. W celu poprawnego wyświetlania wiadomości może być konieczne zamknięcie programu %2$S i usunięcie pliku Inbox.msf.
+filterFolderTruncateFailed=Podczas przenoszenia wiadomości za pomocą filtru z folderu Otrzymane do folderu „%1$S” wystąpił błąd porządkowania pliku wiadomości. W celu poprawnego wyświetlania wiadomości może być konieczne zamknięcie programu %2$S i usunięcie pliku Inbox.msf.
 
 mailboxTooLarge=Folder %S jest zapełniony i nie pomieści już więcej wiadomości. Aby zrobić miejsce na kolejne wiadomości, należy usunąć starą lub niepożądaną pocztę, a następnie wykonać porządkowanie folderu.
 errorGettingDB=Nie można otworzyć pliku podsumowania dla %S. Prawdopodobnie wystąpił błąd dysku lub pełna ścieżka jest zbyt długa.
@@ -277,7 +277,7 @@ mailnews.search_date_separator=
 mailnews.search_date_leading_zeros=true
 
 # offline msg 
-nocachedbodybody=Treść bieżącej wiadomości nie została pobrana do odczytu w trybie offline. Aby przeczytać tę wiadomość, należy ponownie połączyć się z serwerem, wybierając Tryb offline z menu Plik, a następnie odznaczając Pracuj w trybie offline. Możliwe jest dokonanie wyboru, które wiadomości lub foldery będą dostępne do odczytu w trybie offline. W tym celu należy wybrać Tryb offline z menu Plik, a następnie Pobierz/Synchronizuj. Aby zapobiec pobieraniu dużych wiadomości, można zmienić ustawienia w Konfiguracji kont (kategoria "Miejsce na dysku").
+nocachedbodybody=Treść bieżącej wiadomości nie została pobrana do odczytu w trybie offline. Aby przeczytać tę wiadomość, należy ponownie połączyć się z serwerem, wybierając Tryb offline z menu Plik, a następnie odznaczając Pracuj w trybie offline. Możliwe jest dokonanie wyboru, które wiadomości lub foldery będą dostępne do odczytu w trybie offline. W tym celu należy wybrać Tryb offline z menu Plik, a następnie Pobierz/Synchronizuj. Aby zapobiec pobieraniu dużych wiadomości, można zmienić ustawienia w Konfiguracji kont (kategoria „Miejsce na dysku”).
 
 # accountCentral
 mailnews.account_central_page.url=chrome://messenger/content/msgAccountCentral.xul
