--- a/pl/suite/chrome/common/dataman/dataman.properties
+++ b/pl/suite/chrome/common/dataman/dataman.properties
@@ -69,7 +69,7 @@ fdata.deleteSelectedTitle=Usuń wybrane dane formularzy
 fdata.deleteSelectedYes=&Usuń
 
 # forget
-forget.desc.domain.pre=Usuń wszystkie dane następujących typów, a powiązane z domeną "%S":
-forget.desc.domain.post=Wszystkie dane następujących typów, powiązane z domeną "%S", zostały usunięte:
+forget.desc.domain.pre=Usuń wszystkie dane następujących typów, a powiązane z domeną „%S”:
+forget.desc.domain.post=Wszystkie dane następujących typów, powiązane z domeną „%S”, zostały usunięte:
 forget.desc.global.pre=Usuń wszystkie dane następujących typów:
 forget.desc.global.post=Wszystkie dane, następujących typów, zostały usunięte:
