--- a/pl/suite/chrome/common/sidebar/sidebar.properties
+++ b/pl/suite/chrome/common/sidebar/sidebar.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 addPanelConfirmTitle=Dodaj kartę do panelu bocznego
-addPanelConfirmMessage=Dodać kartę "%title%" do %name%?##Źródło: %url%
+addPanelConfirmMessage=Dodać kartę „%title%” do %name%?##Źródło: %url%
 persistentPanelWarning=Dodawana do panelu bocznego karta może przesyłać dane poprzez Internet oraz wykonywać skrypty JavaScript nawet wtedy, gdy %name% jest zamknięty.
 
 dupePanelAlertTitle=Panel boczny
