--- a/pl/suite/chrome/common/typeaheadfind.properties
+++ b/pl/suite/chrome/common/typeaheadfind.properties
@@ -4,11 +4,11 @@
 
 openparen=(
 closeparen=)
-textfound=Znaleziono tekst: "
-textnotfound=Nie znaleziono tekstu: "
-linkfound=Znaleziono odnośnik: "
-linknotfound=Nie znaleziono odnośnika: "
-closequote="
+textfound=Znaleziono tekst: „
+textnotfound=Nie znaleziono tekstu: „
+linkfound=Znaleziono odnośnik: „
+linknotfound=Nie znaleziono odnośnika: „
+closequote=”
 stopfind=Zatrzymano wyszukiwanie.
 starttextfind=Treść całej strony - rozpoczęto wyszukiwanie wprowadzanych znaków
 startlinkfind=Odnośniki - rozpoczęto wyszukiwanie wprowadzanych znaków 
