--- a/pl/suite/chrome/mailnews/pref/prefs.properties
+++ b/pl/suite/chrome/mailnews/pref/prefs.properties
@@ -32,7 +32,7 @@ WizardContinue=Anuluj
 enterValidServerName=Wprowadź poprawną nazwę serwera.
 failedRemoveAccount=Nie udało się usunąć tego konta.
 #LOCALIZATION NOTE: confirmRemoveAccount: %S is the account pretty name
-confirmRemoveAccount=Czy na pewno usunąć konto "%S"?
+confirmRemoveAccount=Czy na pewno usunąć konto „%S”?
 confirmRemoveAccountTitle=Usuń konto
 #LOCALIZATION NOTE: accountName: %1$S is server name, %2$S is user name
 accountName=%1$S - %2$S
@@ -41,17 +41,17 @@ accountName=%1$S - %2$S
 confirmDeferAccountWarning=Zmiana miejsca, w którym przechowywana ma być pobrana poczta, spowoduje utratę możliwości odczytu uprzednio pobranych wiadomości. Jeżeli w koncie tym znajdują się wiadomości, należy je najpierw przekopiować do innego konta. Jeżeli ustawione są filtry, które przenoszą wiadomości do tego konta, należy je wyłączyć lub zmienić im folder docelowy. Jeżeli jakiekolwiek konta posiadają specjalne foldery (wysłane, szkice, szablony) w tym koncie, należy je ustawić tak, by znajdowały się one w innym koncie. Czy zmienić miejsce, w którym przechowywana ma być poczta?
 confirmDeferAccountTitle=Odroczyć konto?
 
-directoryAlreadyUsedByOtherAccount=Katalog wybrany w ustawieniach katalogów lokalnych jest obecnie wykorzystywany przez konto "%S". Proszę wybrać inny katalog.
-directoryParentUsedByOtherAccount=Katalog nadrzędny katalogu wybranego w ustawieniach katalogów lokalnych jest obecnie wykorzystywany przez konto "%S". Proszę wybrać inny katalog.
-directoryChildUsedByOtherAccount=Podkatalog katalogu wybranego w ustawieniach katalogów lokalnych jest obecnie wykorzystywany przez konto "%S". Proszę wybrać inny katalog.
+directoryAlreadyUsedByOtherAccount=Katalog wybrany w ustawieniach katalogów lokalnych jest obecnie wykorzystywany przez konto „%S”. Proszę wybrać inny katalog.
+directoryParentUsedByOtherAccount=Katalog nadrzędny katalogu wybranego w ustawieniach katalogów lokalnych jest obecnie wykorzystywany przez konto „%S”. Proszę wybrać inny katalog.
+directoryChildUsedByOtherAccount=Podkatalog katalogu wybranego w ustawieniach katalogów lokalnych jest obecnie wykorzystywany przez konto „%S”. Proszę wybrać inny katalog.
 #Provide default example values for sample email address
 exampleEmailUserName=michalw
 exampleEmailDomain=trylogia.pl
 emailFieldText=Adres e-mail:
 #LOCALIZATION NOTE: defaultEmailText: %1$S is user name, %2$S is domain
-defaultEmailText=Wprowadź swój adres e-mail. Jest to adres, na który będą wysyłane wiadomości (na przykład "%1$S@%2$S").
+defaultEmailText=Wprowadź swój adres e-mail. Jest to adres, na który będą wysyłane wiadomości (na przykład „%1$S@%2$S”).
 #LOCALIZATION NOTE: customizedEmailText: %1$S is provider, %2$S is email username, %3$S is sample email, %4$S is sample username
-customizedEmailText=Wprowadź swoje %1$S %2$S (na przykład, jeżeli twój %1$S adres internetowy to "%3$S", to Twój %2$S to "%4$S").
+customizedEmailText=Wprowadź swoje %1$S %2$S (na przykład, jeżeli twój %1$S adres internetowy to „%3$S”, to Twój %2$S to „%4$S”).
 
 # account manager stuff
 prefPanel-server=Konfiguracja serwera
@@ -79,4 +79,4 @@ identity-delete-confirm-button=Usuń
 
 choosefile=Wybierz plik
 
-forAccount=Dla konta "%S"
+forAccount=Dla konta „%S”
