Bug 1047428 - [AccessFu] Report read only state for editables.r=eeejay

--- a/nl/dom/chrome/accessibility/AccessFu.properties
+++ b/nl/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    ingedrukt
 stateExpanded    =    uitgevouwen
 stateCollapsed   =    samengevouwen
 stateUnavailable =    niet beschikbaar
+stateReadonly    =    alleen-lezen
 stateRequired    =    vereist
 stateTraversed   =    bezocht
 stateHasPopup    =    heeft pop-up
