Bug 1074522 - Implement ellipse()/circle() parsing and style computing

--- a/sk/dom/chrome/layout/css.properties
+++ b/sk/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=nasýtenie
 PEColorLightnessEOF=intenzita
 PEColorOpacityEOF=priehľadnosť hodnoty farby
 PEExpectedNumber=Očakávané číslo, ale bolo nájdené '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=Očakáva sa <position>, ale bolo nájdené '%1$S'.
+PEExpectedRadius=Očakáva sa radius, ale bolo nájdené '%1$S'.
 PEExpectedCloseParen=Očakávaný znak ')', ale bolo nájdené '%1$S'.
 PEDeclEndEOF=';' alebo '}'  pre ukončenie deklarácie
 PEParseDeclarationNoColon=Očakávaný znak ':', ale bolo nájdené '%1$S'.
