Bug 1013989: change the label of the Loop button to Hello

--- a/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sk/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,7 +97,9 @@ quit-button.tooltiptext.mac = Ukončiť %1$S (%2$S)
 social-share-button.label = Zdieľať túto stránku
 social-share-button.tooltiptext = Umožní zdieľať túto stránku
 
-loop-call-button2.label = Začať rozhovor
+# LOCALIZATION NOTE(loop-call-button2.label2): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
 loop-call-button2.tooltiptext = Umožní začať rozhovor
 
 panic-button.label = Zabudnúť
