Bug 752559 - Console warning when sandboxed iframe is used ineffectively.

--- a/nl/dom/chrome/security/security.properties
+++ b/nl/dom/chrome/security/security.properties
@@ -13,3 +13,5 @@ InsecureFormActionPasswordsPresent=Wachtwoordvelden aanwezig in een formulier me
 InsecurePasswordsPresentOnIframe=Wachtwoordvelden aanwezig op een onveilig iframe (http://). Dit vormt een beveiligingsrisico dat het stelen van gebruikersreferenties mogelijk maakt.
 LoadingMixedActiveContent=Laden van gemengde (onveilige) actieve inhoud op een beveiligde pagina “%1$S”
 LoadingMixedDisplayContent=Laden van gemengde (onveilige) vensterinhoud op een beveiligde pagina “%1$S”
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent=Een iframe met als sandboxattribute allow-scripts en allow-same-origin kan zijn sandbox verwijderen.
