--- a/nl/dom/chrome/security/security.properties
+++ b/nl/dom/chrome/security/security.properties
@@ -8,6 +8,8 @@ CrossSiteRequestBlocked=Cross-origin-aanvraag geblokkeerd: de Same Origin Policy
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=De website specificeerde een ongeldige Strict-Transport-Security-header.
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders=De website specificeerde een ongeldige Public-Key-Pins-header.
 InsecurePasswordsPresentOnPage=Wachtwoordvelden aanwezig op een onveilige pagina (http://). Dit vormt een beveiligingsrisico dat het stelen van gebruikersreferenties mogelijk maakt.
 InsecureFormActionPasswordsPresent=Wachtwoordvelden aanwezig in een formulier met een onveilige formulieractie (http://). Dit vormt een beveiligingsrisico dat het stelen van gebruikersreferenties mogelijk maakt.
 InsecurePasswordsPresentOnIframe=Wachtwoordvelden aanwezig op een onveilig iframe (http://). Dit vormt een beveiligingsrisico dat het stelen van gebruikersreferenties mogelijk maakt.
