2224 - Pozbyć się zaimka "Cię/Ciebie"

--- a/pl/suite/chrome/mailnews/news.properties
+++ b/pl/suite/chrome/mailnews/news.properties
@@ -9,7 +9,7 @@ htmlNewsError=<H1>Błąd!</H1> Odpowiedź serwera grup dyskusyjnych:
 # LOCALIZATION NOTE ( articleExpired ): In the following item, translate only "Perhaps the article has expired"
 articleExpired=<B><P>Prawdopodobnie artykuł jest przedawniony</P></B>
 removeExpiredArtLinkText=Kliknij tutaj, aby usunąć wszystkie przedawnione artykuły
-cancelDisallowed=Ta wiadomość najprawdopodobniej nie pochodzi od Ciebie. Możesz wycofać tylko swoje wiadomości, a nie wiadomości wysłane przez inne osoby.
+cancelDisallowed=Ta wiadomość nie wygląda na wiadomość należącą do własnych wiadomości. Możesz wycofać tylko swoje wiadomości, a nie wiadomości wysłane przez inne osoby.
 cancelConfirm=Czy na pewno wycofać tę wiadomość?
 messageCancelled=Wiadomość została wycofana.
 enterUserPassTitle=Wymagane hasło i nazwa użytkownika serwera grup dyskusyjnych
