--- a/pl/suite/chrome/common/dataman/dataman.properties
+++ b/pl/suite/chrome/common/dataman/dataman.properties
@@ -25,7 +25,7 @@ perm.indexedDB.label=Przechowywanie lokalnych baz danych
 perm.install.label=Instalacja dodatków
 perm.offline-app.label=Aplikacje internetowe trybu offline
 perm.object.label=Uruchamianie wtyczek
-perm.password.label=Zapisywanie haseł
+perm.password.label=Zachowywanie haseł
 perm.plugins.label=Aktywowanie wtyczek
 perm.popup.label=Otwieranie wyskakujących okien
 perm.script.label=Uruchamianie skryptów
@@ -40,7 +40,7 @@ pwd.hidePasswords=Ukryj hasła
 pwd.hidePasswords.accesskey=y
 pwd.showPasswords=Pokaż hasła
 pwd.showPasswords.accesskey=a
-pwd.noMasterPasswordPrompt=Czy na pewno pokazać zapisane hasła?
+pwd.noMasterPasswordPrompt=Czy na pewno pokazać zachowane hasła?
 
 pwd.deleteSelected=Czy na pewno usunąć wybrane hasła?
 pwd.deleteSelectedTitle=Usuń wybrane hasła
