--- a/pl/suite/chrome/common/migration/migration.properties
+++ b/pl/suite/chrome/common/migration/migration.properties
@@ -35,7 +35,7 @@ importedSeamonkeyBookmarksTitle=SeaMonkey 1.x, Netscape 6/7 lub Mozilla 1.x
 
 8_generic=Strona domowa
 
-16_generic=Zapisane hasła
+16_generic=Zachowane hasła
 
 32_generic=Zakładki
 
