Aviary.pl bug 4890 - Literówki w Firefoksie

--- a/pl/browser/chrome/browser/devtools/scratchpad.properties
+++ b/pl/browser/chrome/browser/devtools/scratchpad.properties
@@ -86,5 +86,5 @@ scratchpad.label=Brudnopis
 scratchpad.panelLabel=Panel brudnopisu
 scratchpad.tooltip=Brudnopis
 
-selfxss.msg=Ostrzeżenie: należy zachować szczególną ostrożność podczas wklejania rzeczy, których się nie rozumie. Takie treści mogą potencjalnie pozwolić atakującemu na kradzież Twojej tożsamośći lub przejęcie kontroli nad Twoim komputerem. Należy wprowadzić „%S” poniżej (nie trzeba zatwierdzać enterem), aby umożliwić wklejanie.
+selfxss.msg=Ostrzeżenie: należy zachować szczególną ostrożność podczas wklejania rzeczy, których się nie rozumie. Takie treści mogą potencjalnie pozwolić atakującemu na kradzież Twojej tożsamości lub przejęcie kontroli nad Twoim komputerem. Należy wprowadzić „%S” poniżej (nie trzeba zatwierdzać enterem), aby umożliwić wklejanie.
 selfxss.okstring=zezwalaj na wklejanie
