--- a/pl/browser/chrome/browser/devtools/timeline.properties
+++ b/pl/browser/chrome/browser/devtools/timeline.properties
@@ -4,7 +4,7 @@
 
 timeline.label=Oś czasu
 timeline.panelLabel=Panel osi czasu
-timeline.tooltip=Wydajność na osi czsu
+timeline.tooltip=Wydajność na osi czasu
 timeline.tick=%S ms
 
 timeline.records=Zdarzenia
