--- a/pl/browser/chrome/browser/devtools/webconsole.properties
+++ b/pl/browser/chrome/browser/devtools/webconsole.properties
@@ -192,7 +192,7 @@ openNodeInInspector=Kliknij, aby zaznaczyć węzeł w inspektorze
 
 cdFunctionInvalidArgument=Nie można wykonać „cd()” dla wybranego okna. Nieprawidłowy argument.
 
-selfxss.msg=Ostrzeżenie: należy zachować szczególną ostrożność podczas wklejania rzeczy których się nie rozumie. Takie treści mogą potencjalnie pozwolić atakującemu na kradzież Twojej tożsamośći lub przejęcie kontroli nad Twoim komputerem. Należy wprowadzić „%S” poniżej (nie trzeba zatwierdzać enterem), aby umożliwić wklejanie.
+selfxss.msg=Ostrzeżenie: należy zachować szczególną ostrożność podczas wklejania rzeczy których się nie rozumie. Takie treści mogą potencjalnie pozwolić atakującemu na kradzież Twojej tożsamości lub przejęcie kontroli nad Twoim komputerem. Należy wprowadzić „%S” poniżej (nie trzeba zatwierdzać enterem), aby umożliwić wklejanie.
 selfxss.okstring=zezwalaj na wklejanie
 
 messageToggleDetails=Przełącz szczegóły wiadomości
