--- a/pl/browser/chrome/browser/devtools/webide.properties
+++ b/pl/browser/chrome/browser/devtools/webide.properties
@@ -13,7 +13,7 @@ mainProcess_label=Główny proces
 local_runtime=Lokalne środowisko
 remote_runtime=Zdalne środowisko
 remote_runtime_promptTitle=Zdalne środowisko
-remote_runtime_promptMessage=nazwahosta:port
+remote_runtime_promptMessage=nazwa hosta:port
 
 importPackagedApp_title=Wybór katalogu
 importHostedApp_title=Otwieranie aplikacji zdalnej
