--- a/fr/toolkit/chrome/global/resetProfile.properties
+++ b/fr/toolkit/chrome/global/resetProfile.properties
@@ -5,8 +5,8 @@
 # LOCALIZATION NOTE: These strings are used for profile reset.
 
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
-resetUnusedProfile.message=Il semblerait que vous n'ayez pas démarré %S depuis un petit moment. Souhaitez-vous le nettoyer et retrouver un profil comme neuf ? Au fait, heureux de vous retrouver !
+resetUnusedProfile.message=Il semblerait que vous n'ayez pas démarré %S depuis un petit moment. Souhaitez-vous le nettoyer pour retrouver un profil comme neuf ? Au fait, heureux de vous retrouver !
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Réinitialiser %S…
-resetProfile.resetButton.accesskey=R
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=Réparer %S…
+refreshProfile.resetButton.accesskey=R
