Bug 1063702 - Update all Reset Firefox strings and relevant UI to new UX requirements

--- a/nl/toolkit/chrome/global/resetProfile.properties
+++ b/nl/toolkit/chrome/global/resetProfile.properties
@@ -7,6 +7,6 @@
 # LOCALIZATION NOTE (resetUnusedProfile.message): %S is brandShortName.
 resetUnusedProfile.message=Het lijkt erop dat u %S een tijd niet hebt gebruikt. Wilt u het opschonen voor een frisse “als nieuw”-ervaring? Trouwens, welkom terug!
 
-# LOCALIZATION NOTE (resetProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=%S herinitialiseren…
-resetProfile.resetButton.accesskey=e
+# LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
+refreshProfile.resetButton.label=%S vernieuwen…
+refreshProfile.resetButton.accesskey=e
